--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </head>
 <body>
   <header>
-    <h1>mango19918's website</h1> <img src="https://tinyurl.com/mangoimage82">
+    <h1>mango19918's website</h1>
   </header>
   <nav>
     <ul>
