--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     <p>Hi welcome to the main page</p>
     <p>So basically I'm just a Canadian 🇨🇦 TikToker who posts random stuff. That's literally all you need to know</p>
     <p>todo: add more stuff to this page</p>
+    <img src="https://tinyurl.com/mangoimage82">
   </div>
 </body>
 </html>
