--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
   <div class="content">
     <p>Hi welcome to the main page</p>
     <p>So basically I'm just a Canadian 🇨🇦 TikToker who posts random stuff. That's literally all you need to know</p>
-    <p>todo: add more stuff to this page</p>
-    <img src="https://tinyurl.com/mangoimage82">
+    <p>If you're here from a tutorial, press "tutorial stuff" in the navbar above</p>
   </div>
 </body>
 </html>
