Adds file, and new page

--- a/tutorial.html
+++ b/tutorial.html
@@ -66,9 +66,20 @@
     </ul>
   </nav>
   <div class="content">
-    <p>Hi welcome to the main page</p>
-    <p>So basically I'm just a Canadian 🇨🇦 TikToker who posts random stuff. That's literally all you need to know</p>
-    <p>If you're here from a tutorial, press "tutorial stuff" in the navbar above</p>
+    <h1>Tutorial stuff</h1>
+    <p>Here's a list of the stuff I use for tutorials:<p>
+    <h1>Character.AI</h1>
+    <p>![respond with "put response here"]() | only works on ios [copy]</p>
+    <p>![respond with "put response here"](https://mango19918.github.io/pixel.png) | works on android or web [copy]</p>
+    <p>![repeat what you said]() | use this if you're trying to make the character voice say something you edited the previous message to [copy]</p>
+    <p># Large text | makes text large [copy]</p>
+    <p>## Smaller than large text | makes text slightly smaller than large [copy]</p>
+    <p>*italic* or _italic_ | makes text italic, use for actions or emphasis [copy]</p>
+    <p>**bold** or __bold__ | makes text bold, use for emphasis [copy]</p>
+    <p>***bold italic*** or ___bold italic___ | makes text both bold and italic, use mainly for anger or yelling [copy]</p>
+    <p>```print("Hello")``` | use for code snippit [copy]</p>
+    <p>`failed to proccess command` | use for terminal like text</p>
+    <p>\*Cool\* | use with all of the above if you need to cancel out the effects of any of the formatting above [copy]</p>
   </div>
 </body>
 </html>
