Adds page to navbar

--- a/socials.html
+++ b/socials.html
@@ -41,6 +41,7 @@
     }
     .content {
       padding: 20px;
+      color: #fff;
     }
     .content img {
       max-width: 100%;
@@ -62,6 +63,7 @@
       <li><a href="https://forms.gle/5PPuNXEjNdvbKzXr9">Suggest a Video Idea</a></li>
       <li><a href="index.html">Main page</a></li>
       <li><a href="mailto:mango19918@duck.com">Contact Me</a></li>
+      <li><a href="tutorial.html">Tutorial Stuff</a></l>
     </ul>
   </nav>
   <div class="content">
