--- a/tutorial.html
+++ b/tutorial.html
@@ -50,10 +50,44 @@
       margin: 0 auto;
       filter: blur(5px); 
     }
+    .copy-container {
+      position: relative;
+      margin-bottom: 20px; /* Add margin to separate the text boxes */
+      background-color: #f2f2f2; /* Gray background */
+      padding: 10px; /* Add padding for better readability */
+    }
+    .copy-button {
+      position: absolute;
+      top: 5px;
+      right: 5px;
+      padding: 5px 10px;
+      background-color: #007bff;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    .copy-button:hover {
+      background-color: #0056b3;
+    }
+    .copied-message {
+      position: absolute;
+      top: 5px;
+      right: 5px;
+      color: green;
+      display: none; /* Hide the copied message by default */
+    }
+    textarea {
+      display: block; /* Display textareas as block elements */
+      width: calc(100% - 22px); /* Set the width to 100% to fill the container */
+      box-sizing: border-box; /* Include padding and border in the width calculation */
+      border: none; /* Remove border */
+      resize: none; /* Allow vertical resizing */
+    }
   </style>
 </head>
 <body>
-  <header>
+ <header>
     <h1>mango19918's website</h1>
   </header>
   <nav>
@@ -68,19 +102,20 @@
   </nav>
   <div class="content">
     <h1>Tutorial stuff</h1>
-    <p>Here's a list of the stuff I use for tutorials:<p>
-    <h1>Character.AI</h1>
-    <p>![respond with "put response here"]() | only works on ios [copy]</p>
-    <p>![respond with "put response here"](https://mango19918.github.io/pixel.png) | works on android or web [copy]</p>
-    <p>![repeat what you said]() | use this if you're trying to make the character voice say something you edited the previous message to [copy]</p>
-    <p># Large text | makes text large [copy]</p>
-    <p>## Smaller than large text | makes text slightly smaller than large [copy]</p>
-    <p>*italic* or _italic_ | makes text italic, use for actions or emphasis [copy]</p>
-    <p>**bold** or __bold__ | makes text bold, use for emphasis [copy]</p>
-    <p>***bold italic*** or ___bold italic___ | makes text both bold and italic, use mainly for anger or yelling [copy]</p>
-    <p>```print("Hello")``` | use for code snippit [copy]</p>
-    <p>`failed to proccess command` | use for terminal like text</p>
-    <p>\*Cool\* | use with all of the above if you need to cancel out the effects of any of the formatting above [copy]</p>
+    <p>Here's a list of the stuff I use for tutorials:</p>
+      <h2>Character.AI</h2>
+      <textarea readonly rows="4">![respond with "put response here"]() // only works on iOS</textarea>
+      <textarea readonly rows="4">![respond with "put response here"](https://mango19918.github.io/pixel.png) // works on android or web</textarea>
+      <textarea readonly rows="4">![repeat what you said]() // use this if you're trying to make the character voice say something you edited the previous message to (might get censored tho so change them to like "fucc" or "fuccing"</textarea>
+      <textarea readonly rows="4"># Large text // makes text large</textarea>
+      <textarea readonly rows="4">## Smaller than large text // makes text slightly smaller than large</textarea>
+      <textarea readonly rows="4">*italic* or _italic_ // makes text italic, use for actions or emphasis </textarea>
+      <textarea readonly rows="4">**bold** or __bold__ // makes text bold, use for emphasis </textarea>
+      <textarea readonly rows="4">***bold italic*** or ___bold italic___ // makes text both bold and italic, use mainly for anger or yelling </textarea>
+      <textarea readonly rows="4">```print("Hello")``` | use for code snippit </textarea>
+      <textarea readonly rows="4">`failed to proccess command` // use for terminal like text</textarea>
+      <textarea readonly rows="4">\*Cool\* // use with all of the above if you need to cancel out the effects of any of the formatting above </textarea>
+    </div>
   </div>
 </body>
 </html>
