--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
     <p>Hi welcome to the main page</p>
     <p>So basically I'm just a Canadian 🇨🇦 TikToker who posts random stuff. That's literally all you need to know</p>
     <p>If you're here from a tutorial, press "tutorial stuff" in the navbar above</p>
+    <img src="https://tinyurl.com/mangoimage82">
   </div>
 </body>
 </html>
