--- a/socials.html
+++ b/socials.html
@@ -72,7 +72,7 @@
     <a href="https://tiktok.com/@mango19918">TikTok</a>
     <a href="https://instagram.com/@mango19918">Instagram</a>
     <a href="https://youtube.com/@mango19918">YouTube</a>
-    <a href="https://www.weights.gg/user/mango.19918">Weight.GG (AI voices)</a>
+    <a href="https://www.weights.gg/user/clnd2s7yi0009jw08kla9h11s">Weight.GG (AI voices)</a>
     <p>thats all 💀</p>
   </div>
 </body>
