--- a/index.html
+++ b/index.html
@@ -64,13 +64,14 @@
       <li><a href="index.html">Main page</a></li>
       <li><a href="mailto:mango19918@duck.com">Contact Me</a></li>
       <li><a href="tutorial.html">Tutorial Stuff</a></l>
+      <li><a href="https://testflight.apple.com/join/pLmKZJKw">iOS TikTok Beta</a></li>
     </ul>
   </nav>
   <div class="content">
     <p>Hi welcome to the main page</p>
     <p>So basically I'm just a Canadian 🇨🇦 TikToker who posts random stuff. That's literally all you need to know</p>
     <p>If you're here from a tutorial, press "tutorial stuff" in the navbar above</p>
-    <p>if you're here for tiktok beta, https://testflight.apple.com/join/pLmKZJKw for ios</p>
+    <p>if you're here for tiktok beta, click the one at the top for ios</p>
   </div>
 </body>
 </html>
