--- a/socials.html
+++ b/socials.html
@@ -73,6 +73,7 @@
     <a href="https://instagram.com/@mango19918">Instagram</a>
     <a href="https://youtube.com/@mango19918">YouTube</a>
     <a href="https://www.weights.gg/user/clnd2s7yi0009jw08kla9h11s">Weight.GG (AI voices)</a>
+    <a href="https://www.chess.com/member/mango19918">Chess.com</a>
     <p>thats all 💀</p>
   </div>
 </body>
