--- a/index.html
+++ b/index.html
@@ -58,20 +58,17 @@
   </header>
   <nav>
     <ul>
-      <li><a href="socials.html">Socials</a></li>
-      <li><a href="https://routinehub.co/user/mango19918">My iOS Shortcuts</a></li>
-      <li><a href="https://forms.gle/5PPuNXEjNdvbKzXr9">Suggest a Video Idea</a></li>
       <li><a href="index.html">Main page</a></li>
+      <li><a href="socials.html">My accounts</a></li>
       <li><a href="mailto:mango19918@duck.com">Contact Me</a></li>
       <li><a href="tutorial.html">Tutorial Stuff</a></l>
-      <li><a href="https://testflight.apple.com/join/pLmKZJKw">iOS TikTok Beta</a></li>
+      <li><a href="links.html">Links</a></li>
     </ul>
   </nav>
   <div class="content">
-    <p>Hi welcome to the main page</p>
-    <p>So basically I'm just a Canadian 🇨🇦 TikToker who posts random stuff. That's literally all you need to know</p>
-    <p>If you're here from a tutorial, press "tutorial stuff" in the navbar above</p>
-    <p>if you're here for tiktok beta, click the one at the top for ios</p>
+    <p>hi welcome to the main page</p>
+    <p>if you're here for any link press links</p>
+    <p>otherwise uhh im mango (i go by pest on discord) and i make tiktok videos and do cool stuff</p>
   </div>
 </body>
 </html>
