--- a/tutorial.html
+++ b/tutorial.html
@@ -92,12 +92,11 @@
   </header>
   <nav>
     <ul>
-      <li><a href="socials.html">Socials</a></li>
-      <li><a href="https://routinehub.co/user/mango19918">My iOS Shortcuts</a></li>
-      <li><a href="https://forms.gle/5PPuNXEjNdvbKzXr9">Suggest a Video Idea</a></li>
       <li><a href="index.html">Main page</a></li>
+      <li><a href="socials.html">My accounts</a></li>
       <li><a href="mailto:mango19918@duck.com">Contact Me</a></li>
       <li><a href="tutorial.html">Tutorial Stuff</a></l>
+      <li><a href="links.html">Links</a></li>
     </ul>
   </nav>
   <div class="content">
