--- a/socials.html
+++ b/socials.html
@@ -58,22 +58,24 @@
   </header>
   <nav>
     <ul>
-      <li><a href="socials.html">Socials</a></li>
-      <li><a href="https://routinehub.co/user/mango19918">My iOS Shortcuts</a></li>
-      <li><a href="https://forms.gle/5PPuNXEjNdvbKzXr9">Suggest a Video Idea</a></li>
       <li><a href="index.html">Main page</a></li>
+      <li><a href="socials.html">My accounts</a></li>
       <li><a href="mailto:mango19918@duck.com">Contact Me</a></li>
       <li><a href="tutorial.html">Tutorial Stuff</a></l>
+      <li><a href="links.html">Links</a></li>
     </ul>
   </nav>
   <div class="content">
-    <h1>Socials!</h1>
-    <p>Okay so here's a list of my socials<p>
+    <h1>My accounts</h1>
+    <p>Okay so here's a list of my accounts<p>
     <a href="https://tiktok.com/@mango19918">TikTok</a>
     <a href="https://instagram.com/@mango19918">Instagram</a>
     <a href="https://youtube.com/@mango19918">YouTube</a>
     <a href="https://www.weights.gg/user/clnd2s7yi0009jw08kla9h11s">Weight.GG (AI voices)</a>
-    <a href="https://www.chess.com/member/mango19918">Chess.com</a>
+    <a href="https://discord.com/users/1045376380021510235">Discord (@mango19918)</a>
+    <a href="https://www.roblox.com/users/942386549/profile">Roblox</a>
+    <a href="https://character.ai/profile/mango19918">Character.AI</a>
+    <a href="https://www.xbox.com/en-CA/play/user/Deadly5933">Xbox</a>
     <p>thats all 💀</p>
   </div>
 </body>
