--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <div class="content">
     <p>hi welcome to the main page</p>
     <p>if you're here for any link press links</p>
-    <p>otherwise uhh im mango (i go by pest on discord) and i make tiktok videos and do cool stuff</p>
+    <p>otherwise uhh im mango (i go by Cosmo on discord) and i make tiktok videos and do cool stuff</p>
   </div>
 </body>
 </html>
