--- a/links.html
+++ b/links.html
@@ -82,7 +82,7 @@
     <h2>Links</h2>
     <div class="links-list">
       <a href="https://smilelabs.fandom.com" target="_blank">Smile Labs Wiki</a>
-      <a href="mtvs.html">MTVS Page</a>
+      <a href="mtvs.html">MyTeardrop Versions</a>
     </div>
   </div>
 </body>
