--- a/links.html
+++ b/links.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>mango's website - Links</title>
+  <title>mango's website</title>
   <style>
     body {
       font-family: Ubuntu, sans-serif;
