--- a/socials.html
+++ b/socials.html
@@ -50,6 +50,20 @@
       margin: 0 auto;
       filter: blur(5px); 
     }
+    .socials-list {
+      margin-top: 20px;
+    }
+    .socials-list a {
+      display: block;
+      color: #fff;
+      text-decoration: none;
+      padding: 10px;
+      background-color: rgba(0, 0, 0, 0.5);
+      margin-bottom: 10px;
+    }
+    .socials-list a:hover {
+      background-color: rgba(0, 0, 0, 0.7);
+    }
   </style>
 </head>
 <body>
@@ -65,17 +79,18 @@
     </ul>
   </nav>
   <div class="content">
-    <h1>My accounts</h1>
-    <p>Okay so here's a list of my accounts<p>
-    <a href="https://tiktok.com/@mango19918">TikTok</a>
-    <a href="https://instagram.com/@mango19918">Instagram</a>
-    <a href="https://youtube.com/@mango19918">YouTube</a>
-    <a href="https://www.weights.gg/user/clnd2s7yi0009jw08kla9h11s">Weight.GG (AI voices)</a>
-    <a href="https://discord.com/users/1045376380021510235">Discord (@mango19918)</a>
-    <a href="https://www.roblox.com/users/942386549/profile">Roblox</a>
-    <a href="https://character.ai/profile/mango19918">Character.AI</a>
-    <a href="https://www.xbox.com/en-CA/play/user/Deadly5933">Xbox</a>
-    <p>thats all 💀</p>
+    <h2>My accounts</h2>
+    <div class="socials-list">
+      <a href="https://tiktok.com/@mango19918" target="_blank">TikTok</a>
+      <a href="https://instagram.com/@mango19918" target="_blank">Instagram</a>
+      <a href="https://youtube.com/@mango19918" target="_blank">YouTube</a>
+      <a href="https://www.weights.gg/user/clnd2s7yi0009jw08kla9h11s" target="_blank">Weight.GG (AI voices)</a>
+      <a href="https://discord.com/users/1045376380021510235" target="_blank">Discord (@mango19918)</a>
+      <a href="https://www.roblox.com/users/942386549/profile" target="_blank">Roblox</a>
+      <a href="https://character.ai/profile/mango19918" target="_blank">Character.AI</a>
+      <a href="https://www.xbox.com/en-CA/play/user/Deadly5933" target="_blank">Xbox</a>
+    </div>
+    <p>That's all 💀</p>
   </div>
 </body>
 </html>
