--- a/links.html
+++ b/links.html
@@ -81,8 +81,8 @@
   <div class="content">
     <h2>Links</h2>
     <div class="links-list">
-      <a href="https://smilelabs.fandom.com" target="_blank">Smile Labs Wiki</a>
-      <a href="mtvs.html">MyTeardrop Versions</a>
+      <a href="https://smilelabs.fandom.com" target="_blank">S.M.I.L.E Labs Wiki</a>
+      <a href="https://myteardroparchive.ct8.pl/">MyTeardrop Archive (NOT MINE)</a>
     </div>
   </div>
 </body>
