--- a/socials.html
+++ b/socials.html
@@ -88,6 +88,7 @@
       <a href="https://discord.com/users/1045376380021510235" target="_blank">Discord (@mango19918)</a>
       <a href="https://www.roblox.com/users/942386549/profile" target="_blank">Roblox</a>
       <a href="https://character.ai/profile/mango19918" target="_blank">Character.AI</a>
+      <a href="https://open.spotify.com/user/31vv374bmmj7wo55d745igg7wfju" target="_blank">Spotify</a>
       <a href="https://www.xbox.com/en-CA/play/user/Deadly5933" target="_blank">Xbox</a>
     </div>
     <p>That's all 💀</p>
